# RegRag

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  audit-playground.jsonl  audit.jsonl  pyproject.toml  regrag_manager_brief.docx
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: audit-log-schema.md  chunking.md  eval-methodology.md  ingestion.md  retrieval.md
docs/adr/: 0001-record-architecture-decisions.md
evals/: __init__.py  comparison.py  runner.py  types.py
evals/gold/: README.md  reg_e_v1.jsonl
examples/playground/: README.md  app.py
examples/web/: index.html
examples/web-next/: .gitignore  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
examples/web-next/src/app/: globals.css  layout.tsx  page.tsx
examples/web-next/src/components/: citation-list.tsx  empty-state-guide.tsx  model-select.tsx  pipeline-trace.tsx  query-form.tsx  result-panel.tsx  sidebar.tsx  topbar.tsx
examples/web-next/src/components/ui/: badge.tsx  button.tsx  card.tsx  select.tsx  textarea.tsx
examples/web-next/src/hooks/: use-query-runner.ts
examples/web-next/src/lib/: api.ts  types.ts  utils.ts
scripts/: ingest_reg_e.py  run_evals.py
src/regrag/: __init__.py  api.py  cli.py  pipeline.py  pipeline_agent.py  prompt.py
src/regrag/agent/: __init__.py  orchestrator.py  tools.py  types.py
src/regrag/audit/: __init__.py  logger.py  schema.py
src/regrag/chunking/: __init__.py  chunk.py  chunker.py  hierarchy.py
src/regrag/citations/: __init__.py  extractor.py  types.py  verifier.py
src/regrag/ingest/: __init__.py  ecfr_client.py  parser.py
src/regrag/models/: __init__.py  anthropic.py  base.py  fake.py  llama_local.py  openai.py  types.py
src/regrag/pii/: __init__.py  scrubber.py
src/regrag/retrieval/: __init__.py  bm25.py  dense.py  embeddings.py  fusion.py  hybrid.py  rerank.py  stopwords.py  types.py
src/regrag/store/: __init__.py  base.py  chroma.py  in_memory.py
tests/: conftest.py
tests/fixtures/: eval_smoke.jsonl  reg_e_part_1005_excerpt.xml
tests/unit/: test_agent.py  test_anthropic_agent.py  test_audit.py  test_bm25.py  test_chunker.py  test_citation_extractor.py  test_citation_verifier.py  test_comparison.py  test_dense_retriever.py  test_ecfr_client.py  test_embeddings.py  test_eval_runner.py  test_fake_adapter.py  test_fusion.py  test_hybrid.py  test_in_memory_store.py  test_openai_agent.py  test_parser.py  test_pii_scrubber.py  test_pipeline.py  test_prompt.py  test_rerank.py  test_smoke.py
