[project]
name = "regrag"
version = "0.1.0"
description = "Reg-Compliant RAG Template for US banking regulations. v1: Regulation E (12 CFR Part 1005)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "RegRAG contributors" }]
keywords = ["rag", "llm", "compliance", "banking", "regulation", "cfr", "regulation-e"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # HTTP + parsing
    "httpx>=0.27",
    "lxml>=5.2",
    # Typed models
    "pydantic>=2.7",
    # Retrieval
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0",
    "chromadb>=0.5",
    # PII
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    # Model adapters (cloud always-on; local is optional extra)
    "anthropic>=0.40",
    "openai>=1.40",
    # CLI + logging + config
    "click>=8.1",
    "rich>=13.7",
    "structlog>=24.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
local = [
    "llama-cpp-python>=0.2",
]
playground = [
    "streamlit>=1.36",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "respx>=0.21",
    "types-lxml>=2024.4",
    "detect-secrets>=1.5",
]

[project.scripts]
regrag = "regrag.cli:main"

[project.urls]
Homepage = "https://github.com/your-handle/regrag"
Repository = "https://github.com/your-handle/regrag"
Issues = "https://github.com/your-handle/regrag/issues"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/regrag"]

# ---- Lint / format ----
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "evals"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",              # isort
    "N",              # pep8-naming
    "UP",             # pyupgrade
    "B",              # flake8-bugbear
    "C4",             # flake8-comprehensions
    "RET",            # flake8-return
    "SIM",            # flake8-simplify
    "RUF",            # ruff-specific
]
ignore = [
    "E501",           # line length is enforced by ruff format, not lint
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "N802"]   # tests can use long names and weird patterns
"evals/**" = ["B"]

# ---- Type check ----
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
ignore_missing_imports = true
files = ["src", "tests", "evals"]

# ---- Tests ----
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: tests that hit a real Chroma store or model API (deselected by default in CI)",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/regrag"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 70
